# solana-to-gpt

./: .gitignore  README.md  prices_202310121026.csv  stats_202310121026.csv
backend/: README.md  pyproject.toml
backend/solana_to_gpt/: .env.example  celerybeat-schedule  docker-compose.yaml  main.py
backend/solana_to_gpt/databases/: pg.py
backend/solana_to_gpt/models/: coinmarketcap.py  messages.py  meta.py  tag.py
backend/solana_to_gpt/routes/: search.py  solana_to_gpt.py  tags.py  tokens.py  users.py
backend/solana_to_gpt/services/: coinmarketcap.py  embeddings.py  github.py  messages.py  prices.py  sessions.py  streams.py  tokens.py  tweeter.py  web.py
backend/solana_to_gpt/utils/: documents.py
front/: README.md  next.config.js  package-lock.json  package.json  tsconfig.json
front/.next/: build-manifest.json  react-loadable-manifest.json  trace
front/.next/server/: _error.js  middleware-build-manifest.js  middleware-react-loadable-manifest.js  pages-manifest.json
front/.next/server/pages/: _app.js  _document.js  _error.js  index.js
front/.next/static/chunks/: _error.js  node_modules_censo-custody_solana-wallet-adapter_lib_esm_index_js.js  node_modules_fractalwagmi_solana-wallet-adapter_dist_esm_index_js.js  node_modules_jnwng_walletconnect-solana_lib_esm_index_js.js  node_modules_particle-network_solana-wallet_lib_index_js.js  (+6 more)
front/public/: index.html
front/src/components/: LoginSolana.tsx
front/src/hooks/: useSolanaToGPT.ts
front/src/pages/: _app.tsx  index.tsx
front/src/theme/: index.ts  overrides.ts
solana_token/: key.json
(+100 files in other folders)
